# rag-notebooks

./: README.md
llamaindex/: README  pyproject.toml
llamaindex/research/: Law_LlamaParse_A_Tool_for_Parsing_Complex_Documents.ipynb  Learn Querying.ipynb  MetadataExtractionSEC.ipynb  Starter Tutorial (OpenAI).ipynb  get_chat_engine.ipynb  recursive_retriever_nodes.ipynb  starter.py
llamaindex/research/storage/: default__vector_store.json  docstore.json  index_store.json
llamaindex/utils/: llamaindex_utils.py
