[tool.poetry]
name = "llamaindex"
version = "0.1.0"
description = ""
authors = ["Pierre"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.12"
numpy = "^1.26.4"
pandas = "^2.2.2"
llama-index = {version = "0.9.7", python = ">=3.11,<3.12"}
python-dotenv = "1.0.1"
fastapi = "0.100.1"
pydantic = "^1.10.8"
uvicorn = "^0.22.0"
sqlalchemy = {extras = ["async"], version = "^2.0.15"}
aiosqlite = "^0.19.0"
asyncpg = "^0.27.0"
alembic = "^1.11.1"
sse-starlette = "^1.6.1"
pypdf = "^3.9.1"
anyio = "^3.7.0"
s3fs = "^2023.6.0"
fsspec = "^2023.6.0"
pdfkit = "^1.0.0"
pgvector = "^0.1.8"
sentry-sdk = {extras = ["fastapi"], version = "^1.28.1"}
polygon = "^1.1.0"
polygon-api-client = "^1.12.3"
nltk = "^3.8.1"
cachetools = "^5.3.1"
greenlet = "^2.0.2"
email-validator = "^2.0.0.post2"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
autoflake = "^2.3.1"
matplotlib = "^3.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
